--- a/Print-it-JS/index.html
+++ b/Print-it-JS/index.html
@@ -18,24 +18,28 @@
         <img
           class="logo"
           src="./assets/images/logo.png"
-          alt="Print it ! Impressions d'entreprises">
+          alt="Print it ! Impressions d'entreprises"
+        />
       </h1>
       <a class="btn devis" href="mailto:contact@print-it.tld">Devis</a>
     </header>
     <main>
       <div id="banner">
         <img
-          class="arrow-left"
+          class="arrow arrow_left"
           src="./assets/images/arrow_left.png"
-          alt="fleche gauche">
+          alt="flèche de gauche"
+        />
         <img
-          class="arrow-right"
+          class="arrow arrow_right"
           src="./assets/images/arrow_right.png"
-          alt="fleche droite">
+          alt="flèche de droite"
+        />
         <img
           class="banner-img"
           src="./assets/images/slideshow/slide1.jpg"
-          alt="Banner Print-it">
+          alt="Banner Print-it"
+        />
         <p>Impressions tous formats <span>en boutique et en ligne</span></p>
         <div class="dots"></div>
       </div>
